Add CSS practice files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>CS 355 Home Page</title>
     <body>
         <h1>This is my home page for CS355</h1>
+        <a href="css/index_css.html">CSS Practice</a>
         <p>Hosting by Chihoon Kim's Git</p>
     </body>
 </html>
