--- a/weather/weather.html
+++ b/weather/weather.html
@@ -1,12 +1,25 @@
-<div class="container">
-    <h2 id="city">Queens</h2>
-    <div class="middle">
-        <img src="" alt="icon" id="icon">
-        <div class="degrees">
-            <h1 id="temp">19</h1>
-            <span>&#176</span>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Weather App</title>
+        <link rel="stylesheet" href="style.css">
+        <a href="../index.html">home</a>
+    </head>
+    <body>
+        
+        <div class="container">
+            <h2 id="city">Queens</h2>
+            <div class="middle">
+                <img src="" alt="icon" id="icon">
+                <div class="degrees">
+                    <h1 id="temp">19</h1>
+                    <span>&#176</span>
+                </div>
+            <h3 id="desc">Sunny</h3>
+            </div>
         </div>
-        <h3 id="desc">Sunny</h3>
-    </div>
+    </body>
+</html>
 
-</div>
+  
