--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <title>CS 355 Home Page</title>
     <body>
         <h1>This is my home page for CS355</h1>
-        <a href="weather/weather.html">Weather app-1</a>
-        <a href="CSS/index_css.html">CSS Practice</a>
+        <ul>
+            <li><a href="weather/weather.html">Weather app-1</a></li>
+            <li><a href="CSS/index_css.html">CSS Practice</a></li>
+        </ul>
         <p>Hosting by Chihoon Kim's Git</p>
     </body>
 </html>
