Upload Js practice

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <ul>
             <li><a href="weather/weather.html">Weather app-1</a></li>
             <li><a href="CSS/index_css.html">CSS Practice</a></li>
+            <li><a href="js/index.html">CSS Practice</a></li>
         </ul>
         <p>Hosting by Chihoon Kim's Git</p>
     </body>
