--- a/js/index.html
+++ b/js/index.html
@@ -6,7 +6,7 @@
     <a href="../index.html">home</a>
     </head>
     <body>
-        <h1>CSS Projects with LL</h1>
+        <h1>JavaScript Projects with LL</h1>
         <ul>    
             <li><a href="clock/index.html">Analog Clock</a></li>
            
