--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <h1>This is my home page for CS355</h1>
         <ul>
             <li><a href="weather/weather.html">Weather app-1</a></li>
-            <li><a href="resume/myresume.html">Resume</a></li>
+            <li><a href="resume/myresume.html">Resume - on process </a></li>
             <li><a href="CSS/index_css.html">CSS Practice</a></li>
-            <li><a href="js/index.html">CSS Practice</a></li>
+            <li><a href="js/index.html">JS Practice</a></li>
         </ul>
         <p>Hosting by Chihoon Kim's Git</p>
     </body>
