--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             <li><a href="resume/myresume.html">Resume</a></li>
             <li><a href="CSS/index_css.html">CSS Practice</a></li>
             <li><a href="js/index.html">CSS Practice</a></li>
+            <li><a href="final/index.html">Final Project</a></li>
         </ul>
         <p>Hosting by Chihoon Kim's Git</p>
     </body>
