--- a/final/index.html
+++ b/final/index.html
@@ -23,5 +23,6 @@
     <li><a href="stu_details.html">Student Details page</a></li>
   </ul>
 </main>
+<footer><a href="./index">Home</a></footer>
 </body>
 </html>
