Indentation, TODO, Change <nav> position

--- a/final/add_class.html
+++ b/final/add_class.html
@@ -1,108 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Add Class</title>
-</head>
-<body>
-<header>
-  <h1>Add Class</h1>
-</header>
-<main>
-  <form>
-    <p class="requirement">
-      <label for="classname">Class Name</label>
-      <input id="classname" type="text" name="classname">
-    </p>
-    <p class="requirement">
-      <label for="code">Class Code</label>
-      <input id="code" type="text" name="code">
-    </p>
-    <p class="requirement">
-      <label for="semester">Semester</label>
-      <select id="semester" name="semester">
-        <option value="Spring">Spring</option>
-        <option value="Fall">Fall</option>
-      </select>
-      <input id="year" type="text" name="year">
-    </p>
-    <p class="requirement">
-      <label for="dep">Department</label>
-      <select id="dep" name="dep">
-        <option value="CSCI">CSCI</option>
-        <option value="MATH">MATH</option>
-        <option value="BIO">BIO</option>
-        <option value="ECON">ECON</option>
-        <option value="PHY">PHYS</option>
-      </select>
-    </p>
-    <p class="requirement">
-      <label for="deadline">Enrollment Deadline</label>
-      <input id="deadline" type="date" name="deadline">
-    </p>
-    <p>Schedule</p>
-    <div class="requirement">
-      <label for="mon">Monday</label>
-      <input id="mon" type="checkbox" name="monday">
-      <input id="mon-time-start" type="time" name="time1">
-      <input id="mon-time-end" type="time" name="time2">
-    </div>
-    <div class="requirement">
-      <label for="tue">Tuesday</label>
-      <input id="tue" type="checkbox" name="tuesday">
-      <input id="tue-time-start" type="time" name="time1">
-      <input id="tue-time-end" type="time" name="time2">
-    </div>
-    <div class="requirement">
-      <label for="wed">Wednesday</label>
-      <input id="wed" type="checkbox" name="wednesday">
-      <input id="wed-time-start" type="time" name="time1">
-      <input id="wed-time-end" type="time" name="time2">
-    </div>
-    <div class="requirement">
-      <label for="thur">Thursday</label>
-      <input id="thur" type="checkbox" name="thursday">
-      <input id="thur-time-start" type="time" name="time1">
-      <input id="thur-time-end" type="time" name="time2">
-    </div>
-    <div class="requirement">
-      <label for="fri">Friday</label>
-      <input id="fri" type="checkbox" name="friday">
-      <input id="fri-time-start" type="time" name="time1">
-      <input id="fri-time-end" type="time" name="time2">
-    </div>
-    <div class="requirement">
-      <label for="sat">Saturday</label>
-      <input id="sat" type="checkbox" name="saturday">
-      <input id="sat-time-start" type="time" name="time1">
-      <input id="sat-time-end" type="time" name="time2">
-    </div>
-    <div class="requirement">
-      <label for="sun">Sunday</label>
-      <input id="sun" type="checkbox" name="sunday">
-      <input id="sun-time-start" type="time" name="time1">
-      <input id="sun-time-end" type="time" name="time2">
-    </div>
-    <p class="requirement">
-      <label for="location">Location</label>
-      <input id="location" type="text" name="location">
-    </p>
-    <p class="requirement">
-      <label for="capacity">Capacity</label>
-      <input id="capacity" type="text" name="capacity">
-    </p>
-    <p>
-      <label for="textbook">Textbook</label>
-      <input id="textbook" type="text" name="textbook">
-    </p>
-    <label for="desc">Description:</label>
-    <p>
-      <textarea id="desc" name="desc" rows="4" cols="50">Class description...</textarea>
-    </p>
-    <input id="add" type="submit" value ="Add">
-    <input id="cancel" type="submit" value="Cancel">
-  </form>
-</main>
+  <head>
+    <meta charset="UTF-8">
+    <title>Add Class</title>
+  </head>
+  <body>
+    <header>
+      <h1>Add Class</h1>
+    </header>
+    <main>
+      <form>
+        <p class="requirement">
+          <label for="classname">Class Name</label>
+          <input id="classname" type="text" name="classname">
+        </p>
+        <p class="requirement">
+          <label for="code">Class Code</label>
+          <input id="code" type="text" name="code">
+        </p>
+        <p class="requirement">
+          <label for="semester">Semester</label>
+          <select id="semester" name="semester">
+            <option value="spring">Spring</option>
+            <option value="fall">Fall</option>
+          </select>
+          <input id="year" type="text" name="year">
+        </p>
+        <p class="requirement">
+          <label for="dep">Department</label>
+          <select id="dep" name="dep">
+            <option value="CSCI">CSCI</option>
+            <option value="MATH">MATH</option>
+            <option value="BIO">BIO</option>
+            <option value="ECON">ECON</option>
+            <option value="PHY">PHYS</option>
+          </select>
+        </p>
+        <p class="requirement">
+          <label for="deadline">Enrollment Deadline</label>
+          <input id="deadline" type="date" name="deadline">
+        </p>
+        <p>Schedule</p>
+        <div class="requirement">
+          <label for="mon">Monday</label>
+          <input id="mon" type="checkbox" name="monday">
+          <input id="mon-time-start" type="time" name="time1">
+          <input id="mon-time-end" type="time" name="time2">
+        </div>
+        <div class="requirement">
+          <label for="tue">Tuesday</label>
+          <input id="tue" type="checkbox" name="tuesday">
+          <input id="tue-time-start" type="time" name="time1">
+          <input id="tue-time-end" type="time" name="time2">
+        </div>
+        <div class="requirement">
+          <label for="wed">Wednesday</label>
+          <input id="wed" type="checkbox" name="wednesday">
+          <input id="wed-time-start" type="time" name="time1">
+          <input id="wed-time-end" type="time" name="time2">
+        </div>
+        <div class="requirement">
+          <label for="thur">Thursday</label>
+          <input id="thur" type="checkbox" name="thursday">
+          <input id="thur-time-start" type="time" name="time1">
+          <input id="thur-time-end" type="time" name="time2">
+        </div>
+        <div class="requirement">
+          <label for="fri">Friday</label>
+          <input id="fri" type="checkbox" name="friday">
+          <input id="fri-time-start" type="time" name="time1">
+          <input id="fri-time-end" type="time" name="time2">
+        </div>
 
-</body>
+        <div class="requirement">
+          <label for="sat">Saturday</label>
+          <input id="sat" type="checkbox" name="saturday">
+          <input id="sat-time-start" type="time" name="time1">
+          <input id="sat-time-end" type="time" name="time2">
+        </div>
+        <div class="requirement">
+          <label for="sun">Sunday</label>
+          <input id="sun" type="checkbox" name="sunday">
+          <input id="sun-time-start" type="time" name="time1">
+          <input id="sun-time-end" type="time" name="time2">
+        </div>
+        <p class="requirement">
+          <label for="location">Location</label>
+          <input id="location" type="text" name="location">
+        </p>
+        <p class="requirement">
+          <label for="capacity">Capacity</label>
+          <input id="capacity" type="text" name="capacity">
+        </p>
+        <p>
+          <label for="textbook">Textbook</label>
+          <input id="textbook" type="text" name="textbook">
+        </p>
+        <label for="desc">Description:</label>
+        <p>
+          <textarea id="desc" name="desc" rows="4" cols="50">Class description...</textarea>
+        </p>
+        <input id="add" type="submit" value ="add">
+        <input id="cancel" type="submit" value="cancel">
+      </form>
+    </main>
+  </body>
 </html>
