--- a/final/edit_profile.html
+++ b/final/edit_profile.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Edit profile</title>
-</head>
-<body>
-<header>
-  <img src="logo.png" alt="logo" width="100" height="100">
-  <h1>Edit Profile</h1>
-</header>
-<main>
-  <p>
-    <label for="title">Title</label>
-    <input id="title" type="text" name="title" placeholder="Dr.">
-    <label for="firstname">First Name</label>
-    <input id="firstname" type="text" name="firstname" placeholder="Jihoon">
-    <label for="lastname">Last Name</label>
-    <input id="lastname" type="text" name="lastname" placeholder="Kim">
-  </p>
-  <p>
-    <label for="dept">Department</label>
-    <input id="dept" type="text" name="dept" placeholder="CSCI">
-  </p>
-  <p>
-    <label for="website">Website</label>
-    <input id="website" type="text" name="website">
-  </p>
-  <p>
-    <label for="email">Email</label>
-    <input id="email" type="text" name="email">
-  </p>
-  <label for="introduction">Introduction</label>
-  <p>
-    <textarea id="introduction" name="introduction" rows="4" cols="50">Hi, Welcome to my class...</textarea>
-  </p>
-  <p>
-    <input type="file" id="myimg" name="myimg">
-    <input type="submit">
-  </p>
-  <p>
-    <input type="submit" value="Edit">
-  </p>
-</main>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Edit profile</title>
+  </head>
+  <body>
+    <header>
+      <img src="logo.png" alt="logo" width="100" height="100">
+      <h1>Edit Profile</h1>
+    </header>
+    <main>
+      <p>
+        <label for="title">Title</label>
+        <input id="title" type="text" name="title" placeholder="Dr.">
+        <label for="firstname">First Name</label>
+        <input id="firstname" type="text" name="firstname" placeholder="Jihoon">
+        <label for="lastname">Last Name</label>
+        <input id="lastname" type="text" name="lastname" placeholder="Kim">
+      </p>
+      <p>
+        <label for="dept">Department</label>
+        <input id="dept" type="text" name="dept" placeholder="CSCI">
+      </p>
+      <p>
+        <label for="website">Website</label>
+        <input id="website" type="text" name="website">
+      </p>
+      <p>
+        <label for="email">Email</label>
+        <input id="email" type="text" name="email">
+      </p>
+      <label for="introduction">Introduction</label>
+      <p>
+        <textarea id="introduction" name="introduction" rows="4" cols="50">Hi, Welcome to my class...</textarea>
+      </p>
+      <p>
+        <!--          TODO: Implement previewing profile image-->
+        <input type="file" id="myimg" name="myimg">
+        <input type="submit">
+      </p>
+      <p>
+        <input type="submit" value="edit">
+      </p>
+    </main>
+  </body>
 </html>
