--- a/final/signup.html
+++ b/final/signup.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sign up page</title>
-</head>
-<body>
-  <header>
-    <img src="logo.png" alt="logo" width="100" height="100">
-   <h1>Sign Up</h1>
-  </header>
-  <main>
-    <div class="content-wrap">
-     <form class="formsection">
-       <p id="radiobtn">
-          <input type="radio" name="option" value="inst" id="inst">
-          <label for="inst">Instructor</label>
-          <input type="radio" name="option" value="stu" id="stu">
-          <label for="stu">Student</label>
-        </p>
-        <p class="fillup">
-          <label>ID</label>
-          <input id="userid" type="text" name="id">
-          <label>Password</label>
-          <input id="pw" type="password" name="pw">
-          <label>Confirm Password</label>
-          <input id="confirm" type="password" name="cf">
-          <label>Email</label>
-          <input id="email" type="email" name="email">
-          <label>Code</label>
-         <input id="code" type="text" name="code">
-       </p>
-        <p class="submit-type">
-          <input id="signup" type="submit" value ="Sign Up">
-          <input id="undo" type="submit" value ="Cancel">
-       </p>
-     </form>
-    </div>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Sign up page</title>
+  </head>
+  <body>
+    <header>
+      <img src="logo.png" alt="logo" width="100" height="100">
+      <h1>Sign Up</h1>
+    </header>
+    <main>
+      <div class="content-wrap">
+       <form class="formsection">
+          <p id="radiobtn">
+            <input type="radio" name="option" value="inst" id="inst">
+            <label for="inst">Instructor</label>
+            <input type="radio" name="option" value="stu" id="stu">
+            <label for="stu">Student</label>
+          </p>
+          <p class="fillup">
+            <label>ID</label>
+            <input id="userid" type="text" name="id">
+            <label>Password</label>
+            <input id="pw" type="password" name="pw">
+            <label>Confirm Password</label>
+            <input id="confirm" type="password" name="cf">
+            <label>Email</label>
+            <input id="email" type="email" name="email">
+            <label>Code</label>
+            <input id="code" type="text" name="code">
+          </p>
+          <p class="submit-type">
+            <input id="signup" type="submit" value ="sign Up">
+            <input id="undo" type="submit" value ="cancel">
+          </p>
+        </form>
+      </div>
+    </main>
+  </body>
 </html>
