Update project CSS part and upload freecodecamp solutions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
             <li><a href="resume/myresume.html">Resume - on process </a></li>
             <li><a href="CSS/index_css.html">CSS Practice</a></li>
             <li><a href="js/index.html">JS Practice</a></li>
+            <li><a href="freecodecamp/index.html">FreeCodeCamp node course</a></li>
+            <li><a href="finalProject/index.html">Final Project</a></li>
         </ul>
         <p>Hosting by Chihoon Kim's Git</p>
     </body>
