--- a/freecodecamp/index.html
+++ b/freecodecamp/index.html
@@ -4,7 +4,7 @@
     <body>
         <h1>FreeCodeCamp solution codes</h1>
         <ul>
-            <li><a href="/">Managing Packages with NPM</a></li>
+            <li><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/freecodecamp/package.json">Managing Packages with NPM</a></li>
             <li><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/freecodecamp/myApp.js">Basic Node and Express</a></li>
         </ul>
         <p>Hosting by Chihoon Kim's Git</p>
