--- a/freecodecamp/index.html
+++ b/freecodecamp/index.html
@@ -2,9 +2,9 @@
 <html>
     <title>freecodecamp</title>
     <body>
+        <a href="../index.html">Home<a>
         <h1>FreeCodeCamp solution codes</h1>
         <ul>
-            <li><a href="./index.html">Home<a><li>
             <li><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/freecodecamp/package.json">Managing Packages with NPM</a></li>
             <li><a href="https://github.com/jihoonk-1116/jihoonk-1116.github.io/blob/master/freecodecamp/myApp.js">Basic Node and Express</a></li>
         </ul>
