--- a/finalProject/roster.html
+++ b/finalProject/roster.html
@@ -33,6 +33,9 @@
     .card{
         background-color: skyblue;
     }
+    .stu-info{
+        text-align: left;
+    }
 </style>
 
 <body>
@@ -104,7 +107,12 @@
                                                             <div class="modal-body">
                                                                 <p>
                                                                 <ul class="stu-info">
-
+                                                                    <li>Student Name: Jihoon Kim</li>
+                                                                    <li>Email: Chihoon.kim27@qc.cuny.edu</li>
+                                                                    <li>Major: Computer Science</li>
+                                                                    <li>Phone Number: 123-143-1242</li>
+                                                                    <li>Address: 4431, Astoria, NY</li>
+                                                                    <li>Introduction: OOP programming</li>
                                                                 </ul>
                                                                 </p>
                                                             </div>
