--- a/finalProject/schedule.html
+++ b/finalProject/schedule.html
@@ -15,7 +15,7 @@
         <h1 class="h1">Instructor Schedule</h1>
     </header>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light justify-content-around" style="background-color:#e3f2fd">
+        <nav class="navbar navbar-expand-lg navbar-light justify-content-around">
             <a href="overview.html"><img src="img/logo.png" alt="logo" width="72" height="50"></a>
             <a class="nav-link" aria-current="page" href="overview.html">Overview</a>
             <a class="nav-link" aria-current="page" href="schedule.html">My Schedule</a>
