--- a/finalProject/overview.html
+++ b/finalProject/overview.html
@@ -206,32 +206,32 @@
                                                 <label class="form-check-label" for="mon">
                                                     Monday
                                                 </label>
-                                                <input id="mon-time-start" type="time" name="time1">
-                                                <input id="mon-time-end" type="time" name="time2">
+                                                <input class="form-time" id="mon-time-start" type="time" name="time1">
+                                                <input class="form-time" id="mon-time-end" type="time" name="time2">
                                             </div>
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" value="tue" id="tue">
                                                 <label class="form-check-label" for="tue">
                                                     Tuesday
                                                 </label>
-                                                <input id="tue-time-start" type="time" name="time1">
-                                                <input id="tue-time-end" type="time" name="time2">
+                                                <input class="form-time" id="tue-time-start" type="time" name="time1">
+                                                <input class="form-time" id="tue-time-end" type="time" name="time2">
                                             </div>
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" value="wed" id="wed">
                                                 <label class="form-check-label" for="wed">
                                                     Wednesday
                                                 </label>
-                                                <input id="wed-time-start" type="time" name="time1">
-                                                <input id="wed-time-end" type="time" name="time2">
+                                                <input class="form-time" id="wed-time-start" type="time" name="time1">
+                                                <input class="form-time" id="wed-time-end" type="time" name="time2">
                                             </div>
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" value="thur" id="thur">
                                                 <label class="form-check-label" for="thur">
                                                     Thursday
                                                 </label>
-                                                <input id="thur-time-start" type="time" name="time1">
-                                                <input id="thur-time-end" type="time" name="time2">
+                                                <input class="form-time" id="thur-time-start" type="time" name="time1">
+                                                <input class="form-time" id="thur-time-end" type="time" name="time2">
 
                                             </div>
                                             <div class="form-check">
@@ -239,24 +239,24 @@
                                                 <label class="form-check-label" for="fri">
                                                     Friday
                                                 </label>
-                                                <input id="fri-time-start" type="time" name="time1">
-                                                <input id="fri-time-end" type="time" name="time2">
+                                                <input class="form-time" id="fri-time-start" type="time" name="time1">
+                                                <input class="form-time" id="fri-time-end" type="time" name="time2">
                                             </div>
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" value="sat" id="sat">
                                                 <label class="form-check-label" for="sat">
                                                     Saturday
                                                 </label>
-                                                <input id="sat-time-start" type="time" name="time1">
-                                                <input id="sat-time-end" type="time" name="time2">
+                                                <input class="form-time" id="sat-time-start" type="time" name="time1">
+                                                <input class="form-time" id="sat-time-end" type="time" name="time2">
                                             </div>
                                             <div class="form-check">
                                                 <input class="form-check-input" type="checkbox" value="sun" id="sun">
                                                 <label class="form-check-label" for="sun">
                                                     Sunday
                                                 </label>
-                                                <input id="sun-time-start" type="time" name="time1">
-                                                <input id="sun-time-end" type="time" name="time2">
+                                                <input class="form-time" id="sun-time-start" type="time" name="time1">
+                                                <input class="form-time" id="sun-time-end" type="time" name="time2">
                                             </div>
                                         </p>
                                         <p>
@@ -291,7 +291,7 @@
                             <td>Science Building,<br> Room 300</td>
                             <td>Open</td>
                             <td class="text-center">
-                                <button type="button" class="btn btn-info btn-xs" data-bs-toggle="modal" data-bs-target="#details0">
+                                <button type="button" class="btn btn-info btn-xs detail-btn" data-bs-toggle="modal" data-bs-target="#details0">
                                     Details
                                 </button>
                                 <!-- Modal -->
@@ -355,8 +355,8 @@
                             <td>Science Building,<br> Room 300</td>
                             <td>Open</td>
                             <td class="text-center">
-                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
-                                <a href="#" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Del</a>
+                                <a class='btn btn-info btn-xs detail-btn' href="#">Details</a>
+                                <a href="#" class="btn btn-danger btn-xs">Del</a>
                             </td>
                         </tr>
                         <tr>
@@ -366,8 +366,8 @@
                             <td>Science Building,<br> Room 300</td>
                             <td>Closed</td>
                             <td class="text-center">
-                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
-                                <a href="#" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Del</a>
+                                <a class='btn btn-info btn-xs detail-btn' href="#">Details</a>
+                                <a href="#" class="btn btn-danger btn-xs">Del</a>
                             </td>
                         </tr>
                     </table>
