--- a/finalProject/roster.html
+++ b/finalProject/roster.html
@@ -20,18 +20,17 @@
     </header>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light justify-content-around">
-            <a href="overview.html"><img src="img/logo.png" alt="logo" width="72" height="50"></a>
+            <a href="overview.html"><img id="logo" src="img/logo.png" alt="logo" width="72" height="50"></a>
             <a class="nav-link" aria-current="page" href="overview.html">Overview</a>
             <a class="nav-link" aria-current="page" href="schedule.html">My Schedule</a>
             <a class="nav-link" aria-current="page" href="roster.html">Roster</a>
             <a class="nav-link" aria-current="page" href="index.html">Sign out</a>
             <form>
-                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                <input id="searchbar" class="form-control" type="text" placeholder="Search" aria-label="Search">
             </form>
         </nav>
     </div>
     <section class="container">
-        <div>
             <div class="card mb-4">
                 <div class="card-body">
                     <h4>Class: Java, Section: CS211-24 </h4>
@@ -127,10 +126,8 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <section class="container">
-        <div>
             <div class="card mb-4">
                 <div class="card-body">
                     <h4>Operating System, CS340-24</h4>
@@ -198,10 +195,8 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
-    <section class="container">
-        <div>
+    <section class="container card-container">
             <div class="card mb-4">
                 <div class="card-body">
                     <h4>Internet&Web tech, CS355-24 </h4>
@@ -269,7 +264,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
 </main>
 </body>
