--- a/finalProject/index.html
+++ b/finalProject/index.html
@@ -13,7 +13,7 @@
     <main>
         <img src="img/logo.png" alt="logo" width="72" height="57">
         <h1 class = "d-flex justify-content-center">QC First</h1>
-        <form class = "container-fluid col-sm-4 align-items-center">
+        <form class = "container col-sm-4 align-items-center">
             <div id="radios" class="mb-4 d-flex justify-content-center">
                 <div class="form-check">
                     <input id="stu" type="radio" name="option" value="stu" class="btn-check">
