--- a/finalProject/schedule.html
+++ b/finalProject/schedule.html
@@ -15,18 +15,18 @@
         <h1 class="h1">Instructor Schedule</h1>
     </header>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light justify-content-around">
-            <a href="overview.html"><img src="img/logo.png" alt="logo" width="72" height="50"></a>
+        <nav class="navbar navbar-expand-lg navbar-light justify-content-around" style="background-color:#e3f2fd">
+            <a href="overview.html"><img id="logo" src="img/logo.png" alt="logo" width="72" height="50"></a>
             <a class="nav-link" aria-current="page" href="overview.html">Overview</a>
             <a class="nav-link" aria-current="page" href="schedule.html">My Schedule</a>
             <a class="nav-link" aria-current="page" href="roster.html">Roster</a>
             <a class="nav-link" aria-current="page" href="index.html">Sign out</a>
             <form>
-                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                <input id="searchbar" class="form-control" type="text" placeholder="Search" aria-label="Search">
             </form>
         </nav>
     </div>
-        <div class="container">
+        <div id="table-container" class="container">
             <table class="table">
                     <tr>
                         <th>Time</th>
