--- a/finalProject/signup.html
+++ b/finalProject/signup.html
@@ -13,7 +13,7 @@
     <main class="form-signin">
         <img src="img/logo.png" alt="logo" width="72" height="57">
         <h1 class = "d-flex justify-content-center">Sign Up</h1>
-        <form class="container-fluid col-sm-4">
+        <form class="container col-sm-4">
             <div id="radios" class="d-flex mb-4 justify-content-center">
                 <div class="form-check">
                     <input id="stu" type="radio" name="option" value="stu" class="btn-check">
