--- a/finalProject/roster.html
+++ b/finalProject/roster.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link href="css/roster.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script
             src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -50,8 +50,8 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
+                                    <h4>Class: Java, Section: CS211-24 </h4>
                                     <table class="table table-striped custab">
-                                        <h4>Class: Java, Section: CS211-24 </h4>
                                         <thead>
                                         <tr>
                                             <th>Name</th>
@@ -79,7 +79,6 @@
                                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="close"></button>
                                                             </div>
                                                             <div class="modal-body">
-                                                                <p>
                                                                 <ul class="stu-info">
                                                                     <li>Student Name: Jihoon Kim</li>
                                                                     <li>Email: Chihoon.kim27@qc.cuny.edu</li>
@@ -88,7 +87,6 @@
                                                                     <li>Address: 4431, Astoria, NY</li>
                                                                     <li>Introduction: OOP programming</li>
                                                                 </ul>
-                                                                </p>
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -104,7 +102,7 @@
                                             <td>Computer Science</td>
                                             <td>Jihoonk-1116@gmail.com</td>
                                             <td class="text-center">
-                                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
+                                                <a class="btn btn-info btn-xs disabled" href="#">Details</a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -113,7 +111,7 @@
                                             <td>Computer Science</td>
                                             <td>Jihoonk-1116@gmail.com</td>
                                             <td class="text-center">
-                                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
+                                                <a class="btn btn-info btn-xs disabled" href="#">Details</a>
                                             </td>
                                         </tr>
                                     </table>
@@ -147,8 +145,8 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
+                                    <h4>Class: Operating System, CS340-24</h4>
                                     <table class="table table-striped custab">
-                                        <h4>Class: Operating System, CS340-24</h4>
                                         <thead>
                                         <tr>
                                             <th>Name</th>
@@ -164,7 +162,7 @@
                                             <td>Computer Science</td>
                                             <td>Jihoonk-1116@gmail.com</td>
                                             <td class="text-center">
-                                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
+                                                <a class="btn btn-info btn-xs disabled" href="#">Details</a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -173,7 +171,7 @@
                                             <td>Computer Science</td>
                                             <td>Jihoonk-1116@gmail.com</td>
                                             <td class="text-center">
-                                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
+                                                <a class="btn btn-info btn-xs disabled" href="#">Details</a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -182,7 +180,7 @@
                                             <td>Computer Science</td>
                                             <td>Jihoonk-1116@gmail.com</td>
                                             <td class="text-center">
-                                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
+                                                <a class="btn btn-info btn-xs disabled" href="#">Details</a>
                                             </td>
                                         </tr>
                                     </table>
@@ -216,8 +214,8 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
+                                    <h4>Class: Internet&Web Tech, CS355-24</h4>
                                     <table class="table table-striped custab">
-                                        <h4>Class: Internet&Web Tech, CS355-24</h4>
                                         <thead>
                                             <tr>
                                                 <th>Name</th>
@@ -233,7 +231,7 @@
                                             <td>Computer Science</td>
                                             <td>Jihoonk-1116@gmail.com</td>
                                             <td class="text-center">
-                                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
+                                                <a class="btn btn-info btn-xs disabled" href="#">Details</a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -242,7 +240,7 @@
                                             <td>Computer Science</td>
                                             <td>Jihoonk-1116@gmail.com</td>
                                             <td class="text-center">
-                                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
+                                                <a class="btn btn-info btn-xs disabled" href="#">Details</a>
                                             </td>
                                         </tr>
                                         <tr>
@@ -251,7 +249,7 @@
                                             <td>Computer Science</td>
                                             <td>Jihoonk-1116@gmail.com</td>
                                             <td class="text-center">
-                                                <a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Details</a>
+                                                <a class="btn btn-info btn-xs disabled" href="#">Details</a>
                                             </td>
                                         </tr>
                                     </table>
