--- a/finalProject/schedule.html
+++ b/finalProject/schedule.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="css/schedule.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Instructor Schedule</title>
 </head>
@@ -15,7 +15,7 @@
         <h1 class="h1">Instructor Schedule</h1>
     </header>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light justify-content-around" style="background-color:#e3f2fd">
+        <nav class="navbar navbar-expand-lg navbar-light justify-content-around">
             <a href="overview.html"><img id="logo" src="img/logo.png" alt="logo" width="72" height="50"></a>
             <a class="nav-link" aria-current="page" href="overview.html">Overview</a>
             <a class="nav-link" aria-current="page" href="schedule.html">My Schedule</a>
