--- a/finalProject/signup.html
+++ b/finalProject/signup.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="css/signup.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Caveat|Montserrat:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sign up page</title>
 </head>
@@ -24,7 +24,7 @@
                     <label for="inst" class="btn btn-outline-primary">Instructor</label>
                 </div>
             </div>
-            <p class="mb-3">
+            <div class="mb-4">
                 <div class="form-floating">
                     <input class="form-control" id="userid" type="email" name="id" placeholder="Email address">
                     <label for="userid">Email address</label>
@@ -49,7 +49,7 @@
                     <input class="form-control" id="dept" type="text" name="dept" placeholder="dept">
                     <label for="dept">Department</label>
                 </div>
-            </p>
+            </div>
             <div class ="d-grid gap-2">
                 <a href="index.html" class="btn btn-primary btn-block">Sign in</a>
                 <a href="index.html" class="btn btn-secondary btn-block">Cancel</a>
