--- a/finalProject/signup.html
+++ b/finalProject/signup.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<!--
+  Name: Chihoon Kim
+  Date: 04.20.2021
+  Section: CS 355
+
+  This is the signup.html page for the final project of CS355. 
+  If a user does not have an account, then the user can sign up to access this website via sign up page.
+  To sign up, a user is required his role, unique code, email and to set up password 
+  This index.html uses Bootstrap for its design. 
+  Background image is from https://unsplash.com/photos/7JX0-bfiuxQ
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
