--- a/finalProject/index.html
+++ b/finalProject/index.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
+<!--
+  Name: Chihoon Kim
+  Date: 04.20.2021
+  Section: CS 355
+
+  This is the index.html page for the final project of CS355. 
+  It connects with instructor or student overview pages depending on the user's role who wants to access the website.
+  If a user does not have an account, then the user can sign up to access this website via sign up page.
+  This index.html uses Bootstrap for its design. 
+  
+  Citation
+  https://getbootstrap.com/docs/5.0/examples/  
+  https://getbootstrap.com/docs/5.0/getting-started/introduction/
+  Background image is from https://unsplash.com/photos/7JX0-bfiuxQ
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
