--- a/finalProject/overview.html
+++ b/finalProject/overview.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
+<!--
+  Name: Chihoon Kim
+  Date: 04.20.2021
+  Section: CS 355
+
+  This is the overview.html page for the final project of CS355. 
+  It gives overall sight of instructor information including his profile, registered class under his name.
+  Registering class, editing profile, deleting class, showing class details are enable on modal window
+  This webpage links to his weekly schedule and student roster.
+  This overview.html uses Bootstrap for its design. 
+  
+  Citation
+  https://getbootstrap.com/docs/5.0/examples/  
+  https://getbootstrap.com/docs/5.0/getting-started/introduction/
+  https://unsplash.com/photos/0ZPSX_mQ3xI
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
