--- a/finalProject/roster.html
+++ b/finalProject/roster.html
@@ -1,4 +1,22 @@
 <!DOCTYPE html>
+<!--
+  Name: Chihoon Kim
+  Date: 04.20.2021
+  Section: CS 355
+
+  This is roster.html page for the final project of CS355. 
+  It gives students' information who is currently registered in the instructor's class.
+  The information is shown by a card section and using modal. The number of cards depend on the number of registered classes. 
+  Showing student details is enable in the roster's modal.
+  This webpage links to his weekly schedule and student overview.
+  This page uses Bootstrap for its design. 
+  
+  Citation
+  https://bbbootstrap.com/snippets/card-container-48980697
+  https://getbootstrap.com/docs/5.0/examples/  
+  https://getbootstrap.com/docs/5.0/getting-started/introduction/
+  https://unsplash.com/photos/0ZPSX_mQ3xI
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
