--- a/finalProject/schedule.html
+++ b/finalProject/schedule.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<!--
+  Name: Chihoon Kim
+  Date: 04.20.2021
+  Section: CS 355
+
+  This is the schedule.html page for the final project of CS355. 
+  It shows weekly view schedule to the instructor as table format. 
+  
+  This page uses Bootstrap for its design. 
+  Background image is from https://unsplash.com/photos/7JX0-bfiuxQ
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
